samples/_failures_safe/1761319529_f4359d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51008175.c: In function ‘main’:
./samples/SAFE/__tmp_51008175.c:142:29: error: expected ‘)’ at end of input
  142 |     if (input.capacity < len
      |        ~                    ^
      |                             )
./samples/SAFE/__tmp_51008175.c:142:5: error: expected declaration or statement at end of input
  142 |     if (input.capacity < len
      |     ^~
